--- a/tmux.conf
+++ b/tmux.conf
@@ -2,11 +2,9 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'dracula/tmux'
-set-option -g @plugin 'b0o/tmux-autoreload'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g status-right '#{ip_address} | #H'
-set -g status-right '#{forecast} | #H'
+set -g @plugin 'egel/tmux-gruvbox'
+
+set -g @tmux-gruvbox 'dark' # or 'light'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
