--- a/config/i3/config
+++ b/config/i3/config
@@ -8,6 +8,8 @@ set $smod                            Shift
 set $wm_setting_font                 pango:Source Sans Pro, Semibold 11
 set $wm_setting_gap_width            10
 set $wm_setting_gap_heigth           10
+set $wm_setting_gap_inner           10
+set $wm_setting_gap_outer           10
 set $wm_setting_border_size          2
 set $wm_setting_key_left             Left
 set $wm_setting_key_down             Down
@@ -19,8 +21,8 @@ set $wm_setting_app_browser          google-chrome
 set $wm_setting_app_launcher         dmenu_run
 set $wm_setting_app_compositor       picom
 
-set $wm_color_border_active_bg       #81A1C1
-set $wm_color_border_active_fg       #3B4252
+set $wm_color_border_active_bg       #56876D
+set $wm_color_border_active_fg       #D8DEE9
 set $wm_color_border_inactive_bg     #3B4252
 set $wm_color_border_inactive_fg     #D8DEE9
 set $wm_color_background             #2E3440
@@ -32,19 +34,24 @@ set $bar_setting_separator           " - "
 set $bar_setting_statusCommand       i3status
 set $bar_setting_trayoutput          full
 
-set $bar_color_background            #3B4252
-set $bar_color_foreground            #D8DEE9
-set $bar_color_statusline            #D8DEE9
-set $bar_color_separator             #D8DEE9
+set $bar_color_background            #2F2235 
+set $bar_color_foreground            #06B178
+set $bar_color_statusline            #04724D
+set $bar_color_separator             #56876D
 
-set $bar_color_workspace_focused_bg  #A3BE8C
-set $bar_color_workspace_focused_fg  #2E3440
-set $bar_color_workspace_active_bg   #EBCB8B
-set $bar_color_workspace_active_fg   #2E3440
-set $bar_color_workspace_inactive_bg #BF616A
-set $bar_color_workspace_inactive_fg #2E3440
-set $bar_color_workspace_urgent_bg   #D08770
-set $bar_color_workspace_urgent_fg   #2E3440
+set $bar_color_workspace_focused_bg  #B88B4A
+set $bar_color_workspace_focused_fg  #533E2D
+set $bar_color_workspace_active_bg   #DDCA7D
+set $bar_color_workspace_active_fg   #533E2D
+set $bar_color_workspace_inactive_bg #242331
+set $bar_color_workspace_inactive_fg #B88B4A
+set $bar_color_workspace_urgent_bg   #A27035
+set $bar_color_workspace_urgent_fg   #DDCA7D
+
+set $background_image_path '/usr/share/backgrounds/ubuntu-wallpaper-d.png'
+
+### set background with feh ###
+exec --no-startup-id /usr/bin/feh --bg-scale $background_image_path 
 
 ### Applications ###
 # Start a terminal emulator
@@ -140,7 +147,9 @@ bindsym $mod+r mode "resize"
 ### Gaps ###
 gaps horizontal $wm_setting_gap_width
 gaps vertical   $wm_setting_gap_heigth
-smart_gaps on
+gaps inner $wm_setting_gap_inner
+gaps outer $wm_setting_gap_outer
+smart_gaps off
 
 ### Borders ###
 default_border pixel $wm_setting_border_size
